--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,9 @@
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^1.0.7",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "vite": "^6.2.5"
   }
 }
